tolk-tester/tests/invalid-symbol/err-2255.tolk
fun testUInt258DoesntExist() {
    var c = 0 as uint258;
}

/**
@compilation_should_fail
@stderr unknown type name `uint258`
 */
